platform/base/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio-injection: enabled
spec: {}
status: {}
