platform/base/propertygraph-api-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: propertygraph-api
spec: {}
status: {}
