platform/base/arango-deployment-replication.yaml
---
# Source: kube-arangodb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arango-deployment-replication-operator
  namespace: api
  labels:
    app.kubernetes.io/name: kube-arangodb
    helm.sh/chart: kube-arangodb-1.0.1
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: deployment-replication
    release: deployment-replication
spec:
  ports:
    - name: tcp-8529
      port: 8528
      protocol: TCP
      targetPort: 8528
  selector:
    app.kubernetes.io/name: kube-arangodb
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: deployment-replication
    release: deployment-replication
    role: leader
  type: ClusterIP
---
# Source: kube-arangodb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: arango-deployment-replication-operator
    namespace: api
    labels:
        app.kubernetes.io/name: kube-arangodb
        helm.sh/chart: kube-arangodb-1.0.1
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/instance: deployment-replication
        release: deployment-replication
spec:
    replicas: 2
    strategy:
        type: Recreate
        
    selector:
        matchLabels:
            app.kubernetes.io/name: kube-arangodb
            app.kubernetes.io/managed-by: Tiller
            app.kubernetes.io/instance: deployment-replication
            release: deployment-replication
    template:
        metadata:
            labels:
                app.kubernetes.io/name: kube-arangodb
                helm.sh/chart: kube-arangodb-1.0.1
                app.kubernetes.io/managed-by: Tiller
                app.kubernetes.io/instance: deployment-replication
                release: deployment-replication
        spec:
            serviceAccountName: arango-deployment-replication-operator
            affinity:
              nodeAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  nodeSelectorTerms:
                    - matchExpressions:
                        - key: beta.kubernetes.io/arch
                          operator: In
                          values:
                            - amd64
              podAntiAffinity:
                preferredDuringSchedulingIgnoredDuringExecution:
                  - weight: 100
                    podAffinityTerm:
                      topologyKey: "kubernetes.io/hostname"
                      labelSelector:
                        matchExpressions:
                          - key: app.kubernetes.io/name
                            operator: In
                            values:
                              - kube-arangodb
                          - key: app.kubernetes.io/instance
                            operator: In
                            values:
                              - deployment-replication
            hostNetwork: false
            hostPID: false
            hostIPC: false
            securityContext:
                runAsNonRoot: true
                runAsUser: 1000
            containers:
                - name: operator
                  imagePullPolicy: Always
                  image: arangodb/kube-arangodb:1.0.1
                  args:
                    - --operator.deployment-replication

                    - --chaos.allowed=false
                  ports:
                      - name: metrics
                        containerPort: 8528
                  securityContext:
                      privileged: false
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      capabilities:
                          drop:
                              - 'ALL'
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 8528
                          scheme: HTTPS
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /ready
                          port: 8528
                          scheme: HTTPS
                      initialDelaySeconds: 5
                      periodSeconds: 10
            tolerations:
                - key: "node.kubernetes.io/unreachable"
                  operator: "Exists"
                  effect: "NoExecute"
                  tolerationSeconds: 5
                - key: "node.kubernetes.io/not-ready"
                  operator: "Exists"
                  effect: "NoExecute"
                  tolerationSeconds: 5

---
# Source: kube-arangodb/templates/backup-operator/cluster-role-binding.yaml

---
# Source: kube-arangodb/templates/backup-operator/cluster-role.yaml

---
# Source: kube-arangodb/templates/backup-operator/role-binding.yaml

---
# Source: kube-arangodb/templates/backup-operator/role.yaml

---
# Source: kube-arangodb/templates/deployment-operator/cluster-role-binding.yaml

---
# Source: kube-arangodb/templates/deployment-operator/cluster-role.yaml

---
# Source: kube-arangodb/templates/deployment-operator/default-role-binding.yaml

---
# Source: kube-arangodb/templates/deployment-operator/default-role.yaml

---
# Source: kube-arangodb/templates/deployment-operator/role-binding.yaml

---
# Source: kube-arangodb/templates/deployment-operator/role.yaml

---
# Source: kube-arangodb/templates/storage-operator/cluster-role-binding.yaml

---
# Source: kube-arangodb/templates/storage-operator/cluster-role.yaml

---
# Source: kube-arangodb/templates/storage-operator/crd.yaml

---
# Source: kube-arangodb/templates/storage-operator/role-binding.yaml

---
# Source: kube-arangodb/templates/storage-operator/role.yaml
