platform/base/propertygraph-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: propertygraph-api
  name: propertygraph-api
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: propertygraph-api
  type: ClusterIP
status:
  loadBalancer: {}
