platform/base/propertygraph-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: propertygraph-frontend
  name: propertygraph-frontend
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: propertygraph-frontend
  type: ClusterIP
status:
  loadBalancer: {}
