platform/base/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: propertygraph-frontend
spec:
  hosts:
    - '*'
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: propertygraph-frontend.default.svc.cluster.local
            port:
              number: 3000
